--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "better-scroll": "^1.14.1",
     "big-number": "^1.0.0",
     "dayjs": "^1.7.7",
     "echarts": "^4.2.0-rc.2",
