--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.11",
     "lowdb": "^1.0.0",
     "mockjs": "^1.0.1-beta3",
+    "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "v-charts": "^1.19.0",
     "v-contextmenu": "^2.8.0",
