--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "lowdb": "^1.0.0",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
     "nprogress": "^0.2.0",
+    "sass-loader": "^7.1.0",
     "v-charts": "^1.19.0",
     "v-contextmenu": "^2.8.0",
     "v-echarts": "^1.0.2",
